syntax = "proto3";

package raft;

option go_package = "pb/";

message LogEntry {
    int64 term = 1;
    string command = 2;
    string key = 3;
    optional string value = 4;
    optional string oldValue = 5;
};

message AppendEntriesRequest {
    int64 term = 1;
    int64 leaderID = 2;
    int64 leaderCommit = 3;
    int64 prevLogIndex = 4;
    int64 prevLogTerm = 5;
    repeated LogEntry entries = 6;
};

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
};

message RequestVoteRequest {
    int64 term = 1;
    int64 candidateID = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
};

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
};

service Raft {
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}